@@ -3,6 +3,8 @@
 * Thread-index: load all threads in the background.
 * Synchronize maildir flags if so configured in .notmuch-config.
 * General XEmbed support: Emacs works.
+* Signature-support: Configure per-account signatures to be either
+  included or attached.
 * All actions requiring write-access run in the background and wait for
   any reads to finish. All read operations need to wait for any ongoing
   write-operations to finish. All write-operations are therefore
